# canvasbio-cb2000

./: .gitignore  AUTHORS  COPYRIGHT  README.md  THIRD_PARTY_NOTICES.md  requirements.txt
docs/: CB2000_STANDALONE_PACKAGE_README.md  CHANGELOG.md  DECISIONS.md  DEVELOPER_LAB.md  DRIVER_NOTES.md  FINDINGS.md  MATCHER_ARCHITECTURE.md  SCRIPTS_TOOLING.md  SIGFM_GOODIX_RESEARCH.md  USB_PROTOCOL_REFERENCE.md
releases/: README.md
scripts/: README.md  batch_summary.sh  battery_report.sh  build_libfprint_deb_ubuntu.sh  build_libfprint_pkg_arch.sh  build_libfprint_rpm_fedora.sh  build_libfprint_rpm_opensuse.sh  build_sigfm_opencv_helper.sh  cb2000_battery_report.py  cb2000_collect_runtime.sh  cb2000_enroll_gate_report.py  cb2000_orchestrator.sh  cb2000_prepare_release_asset.sh  cb2000_run_report.py  cb2000_session_log.sh  cb2000_ubuntu_tester.sh  cb2000_usb_host_access.sh  cb2000_verify_batch_summary.py  cb2000_verify_fn_rootcause.py  cb2000_verify_gate_summary.py  cb2000_verify_metrics.py  gate_summary.sh  requirements.txt  run_cb2000_interactive.sh  run_cb2000_test.sh  setup-libfprint.sh  verify_metrics.sh
scripts/metrics/: analyze.sh  cb2000_paths.py  cb2000_run_report.py  cb2000_verify_metrics.py
scripts/packaging/: build_libfprint_deb_ubuntu.sh  build_libfprint_pkg_arch.sh  build_libfprint_rpm_fedora.sh  build_libfprint_rpm_opensuse.sh  build_sigfm_opencv_helper.sh
scripts/setup/: cb2000_usb_host_access.sh  (+1 more)
src/: canvasbio_cb2000.c  cb2000_sigfm_matcher.c  cb2000_sigfm_matcher.h  cb2000_sigfm_opencv_helper.cpp  meson.build
tools/: 99-canvasbio.rules
