# CanvasBio CB2000 driver for libfprint
#
# To integrate with libfprint:
# 1. Copy this folder to libfprint/libfprint/drivers/canvasbio_cb2000/
# 2. Add 'canvasbio_cb2000' to driver_sources dict in libfprint/libfprint/meson.build
# 3. Add 'canvasbio_cb2000' to default_drivers list in libfprint/meson.build
# 4. Rebuild libfprint
#
# IMPORTANT: Use underscore (_) not hyphen (-) in driver name!

canvasbio_cb2000_sources = files(
    'canvasbio_cb2000.c',
)
